remove code-smell